--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: node index.js
+    - run: git add index.js
+    - run: git commit -m "update file"
+    - run: git push
