--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: node index.js
     - run: |
-          git config --global user.name 'angeal185'
-          git config --global user.email 'angeal185@users.noreply.github.com'
+          git config --global user.name angeal185
+          git config --global user.email angeal185@users.noreply.github.com
           git commit -am "update"
           git push
