--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,8 +1,10 @@
 name: Node.js CI
 
 on:
-  issues:
-    types: [opened, edited, closed, deleted]
+  schedule:
+    - cron:  '* 3 * * *'
+#  issues:
+#    types: [opened, edited, closed, deleted]
 
 jobs:
   build:
