--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   schedule:
     - cron:  '* 3 * * *'
-      
+
 #  issues:
 #    types: [opened, edited, closed, deleted]
 
@@ -26,6 +26,6 @@ jobs:
     - run: |
           git config --global user.name angeal185
           git config --global user.email angeal185@users.noreply.github.com
-          git add *
+          git add ./atom/issues.atom
           git commit -m "update"
           git push
