--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
     - run: |
           git config --global user.name angeal185
           git config --global user.email angeal185@users.noreply.github.com
-          git add ./atom/issues.atom
+          git add *
           git commit -m "update"
           git push
