--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: node atomgen.js
     - run: |
           git config --global user.name angeal185
           git config --global user.email angeal185@users.noreply.github.com
+          git pull
+    - run: node atomgen.js
+    - run: |
           git add *
           git commit -m "update"
           git push
