--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,11 @@
 name: Node.js CI
 
 on:
-  schedule:
-    - cron:  '* 3 * * *'
-#  issues:
-#    types: [opened, edited, closed, deleted]
+#  schedule:
+#    - cron:  '* 3 * * *'
+  issues:
+    types: [opened, edited, closed, deleted]
+    
 jobs:
   build:
 
@@ -20,12 +21,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: node atomgen.js
     - run: |
           git config --global user.name angeal185
           git config --global user.email angeal185@users.noreply.github.com
-          git pull
-    - run: node atomgen.js
-    - run: |
           git add *
           git commit -m "update"
           git push
